--- a/index.html
+++ b/index.html
@@ -35,6 +35,45 @@
       <section id="join">
         <img src="images/love.png" alt="ThinkfulCupid - love" />
         <!-- Add join form here -->
+        <div>
+          <h2>Find your perfect match</h2>
+          <form action="test">
+            <p class="form-line">
+              <label for="email">Email</label>
+              <input
+                type="email"
+                id="email"
+                name="join_form_email"
+                placeholder="email@example.com"
+              />
+            </p>
+            <p class="form-line">
+              <label for="password">Create a Password</label>
+              <input
+                type="password"
+                id="password"
+                name="joinform_password"
+              />
+            </p>
+            <p class="form-line">
+              <label for="username">Username</label>
+              <input type="text" id="username" name="joinform_username" />
+            </p>
+            <p class="form-line">
+              <label for="gender">I am a...</label>
+              <select id="gender" name="joinform_gender">
+                <option value="female">female</option>
+                <option value="male">male</option>
+                <option value="non-binary">non-binary</option>
+              </select>
+            </p>
+            <p>
+              <button type="button">Join!</button>
+            </p>
+          </form>
+        </div>
+      </div>
+    </div>
       </section>
 
       <!-- About -->
